<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cl_signup"
    android:background="@drawable/man_and_women4">


    <TextView
        android:id="@+id/go_to_sin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/back"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout3" />



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_verified_user_black_24dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="35dp"
            android:background="#0000"
            android:hint="@string/fullname"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="#000000" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="35dp"
            android:drawableEnd="@drawable/ic_phone_black_24dp"
            android:background="#0000"
            android:hint="@string/phone"
            android:inputType="phone"
            android:padding="16dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="#000000" />

        <EditText
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="35dp"
            android:background="#0000"
            android:drawableEnd="@drawable/ic_email_black_24dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="#000000" />

        <EditText
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="35dp"
            android:drawableEnd="@drawable/ic_content_cut_black_24dp"
            android:background="#0000"
            android:hint="@string/barber_client"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="#000000" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:drawableEnd="@drawable/ic_location_on_black_24dp"
            android:layout_marginEnd="35dp"
            android:background="#0000"
            android:hint="@string/address"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="#000000" />

        <EditText
            android:id="@+id/pswrd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="35dp"
            android:background="#0000"
            android:drawableEnd="@drawable/ic_dialpad_black_24dp"
            android:hint="@string/password"
            android:inputType="numberPassword"
            android:maxLength="12"
            android:padding="16dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp"
            android:background="#000000" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/angle"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/create"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.10"
        android:background="@drawable/yellow_background">

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
